    glass/schott/inquiry/N-LAF32.yml
    glass/schott/obsolete/LITHOSIL-Q.yml
    glass/schott/obsolete/N-LASF31.yml
    glass/schott/obsolete/N-LASF46.yml
  new data (thanks to Valkai Sándor, Biological Research Centre, Szeged, Hungary!)
    other/resists/Micro resist EpoCore.yml
    other/resists/Micro resist Epolad.yml
  new data (thanks to David Rioux, Polytechnique Montreal, Canada, for providing data in yaml format!)
    other/alloys/Au-Ag/Rioux-Au100Ag0.yml
    other/alloys/Au-Ag/Rioux-Au90Ag10.yml
    other/alloys/Au-Ag/Rioux-Au80Ag20.yml
    other/alloys/Au-Ag/Rioux-Au70Ag30.yml
    other/alloys/Au-Ag/Rioux-Au60Ag40.yml
    other/alloys/Au-Ag/Rioux-Au50Ag50.yml
    other/alloys/Au-Ag/Rioux-Au40Ag60.yml
    other/alloys/Au-Ag/Rioux-Au30Ag70.yml
    other/alloys/Au-Ag/Rioux-Au20Ag80.yml
    other/alloys/Au-Ag/Rioux-Au10Ag90.yml
    other/alloys/Au-Ag/Rioux-Au0Ag100.yml
  new data (thanks to Philipp Krauter, Institut fuer Lasertechnologien in der Medizin und Messtechnik, Ulm, Germany, for providing data in yaml format!)
    organic/C11H12O2 - ethyl cinnamate/Krauter.yml
  new data (thanks to Marcelo Alcocer for contributing data via GitHub!)
    main/BaB2O4/Zhang-o.yml
    main/BaB2O4/Zhang-e.yml
  new data
    main/H2O/Asfar.yml
    main/D2O/Asfar.yml
  minor edits
    main/BaB2O4/Eimerl-o.yml (updated authors list)
    main/BaB2O4/Eimerl-e.yml (updated authors list)
    main/H2O/* (added INFO sectoin)
    main/D2O/* (added INFO sectoin)

2016-01-31
  bug fixes (thanks to Thibault North!)
    fixed path to organic/CH6H6 - benzene.Moutzouris.yml in library.yml
    added main/Ti/Rakic.yml to library.yml
    added glass/schott/P-SF69.yml to library.yml
    removed database/main/Ag/Sthrenberg.yml
  new data (thnks to Robert Treharne for updating the database via GitHub!)
    main/CdS/Treharne.yml
    main/CdTe/Treharne.yml
    other/doped crystals/Al-ZnO/Treharne.yml
    glass/nsg/Pilkington-Optiwhite.yml